tests/ui/trait-bounds/issue-119530-sugg-from-fn.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/issue-119530-sugg-from-fn.rs:4:23
   |
LL |     let string_arr = [foo(); 64];
   |                       ^^^^^ the trait `Copy` is not implemented for `String`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/ffi/os_str.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider using `core::array::from_fn` to initialize the array
   = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
